--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/lucassdr/send-email#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "nodemailer": "^6.4.2"
   }
 }
