--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "send-email",
   "version": "1.0.0",
   "description": "Projeto para envio de e-mails",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
